--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -1,22 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/app_bar_layout"
-    android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="#3F51B5"
-    android:layout_height="wrap_content"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:elevation="6dp">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="#3F51B5"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:elevation="6dp">
 
-</android.support.design.widget.AppBarLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="112px"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+               <com.zhy.autolayout.AutoRelativeLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="112px">
+                <TextView
+                    android:id="@+id/tv_left_title"
+                    android:layout_marginLeft="26px"
+                    android:text="教学信息网"
+                    android:textSize="36px"
+                    android:gravity="center"
+                    android:textColor="#fff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="112px" />
+               </com.zhy.autolayout.AutoRelativeLayout>
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+</android.support.design.widget.CoordinatorLayout>
